dropdown html with chekbox

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8655,205 +8655,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #dea79d; }
+  background: #427ffa; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #c15a88; }
+  background: #0efa52; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #ce300d; }
+  background: #7988f6; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #bcd7cd; }
+  background: #ad354b; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #8a8b07; }
+  background: #b4a665; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #b1dd99; }
+  background: #ca4118; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #d5a39a; }
+  background: #6f1378; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #396b47; }
+  background: #bdaff9; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #dc05eb; }
+  background: #8ab710; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #de1dfb; }
+  background: #423cc1; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #cd191e; }
+  background: #c3fbba; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #b49b67; }
+  background: #3f207d; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #219581; }
+  background: #9ebed0; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #e86581; }
+  background: #a051d2; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #05a58c; }
+  background: #771cf3; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #44397d; }
+  background: #ecca72; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #83a579; }
+  background: #de5793; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #ef8320; }
+  background: #598762; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #b0306d; }
+  background: #3aa276; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #2ebe45; }
+  background: #47a060; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #0ba3f7; }
+  background: #02cf6f; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #399713; }
+  background: #e978c8; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #1e52bd; }
+  background: #88f259; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #fc526d; }
+  background: #d5f8cd; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #81e378; }
+  background: #70ebdf; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #f23ab9; }
+  background: #164da6; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #69eb6b; }
+  background: #56c4ed; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #ffebad; }
+  background: #3f4e2b; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #fb845a; }
+  background: #905d30; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #1c9017; }
+  background: #805eb2; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #89ddf8; }
+  background: #857898; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #599822; }
+  background: #40b609; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #0979b3; }
+  background: #7de7ad; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #de972e; }
+  background: #30592e; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #9d3132; }
+  background: #2ae49a; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #40f62f; }
+  background: #d926a1; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #bf1b27; }
+  background: #b9fe2c; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #2d9cc6; }
+  background: #c61ce6; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #f0f153; }
+  background: #415d0f; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #8a6ed6; }
+  background: #d595a3; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #f73fa2; }
+  background: #3c780a; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #8c6f73; }
+  background: #d9a061; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #bb610c; }
+  background: #1b9608; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #274a14; }
+  background: #6edc84; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #a88136; }
+  background: #0f4c09; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #46130f; }
+  background: #f210c8; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #02c093; }
+  background: #3c822f; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #ef8ebd; }
+  background: #8c285c; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #b6e6c8; }
+  background: #62ecb4; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #a91af0; }
+  background: #5c6a7c; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #d9a25c; }
+  background: #60928f; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #2aa10d; }
+  background: #62afc1; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #6f2e45; }
+  background: #d341b1; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #17587d; }
+  background: #63115d; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #52f5b4; }
+  background: #be9422; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #08c172; }
+  background: #4b139b; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #aa2662; }
+  background: #a953f8; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #444da4; }
+  background: #461361; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #d44ebf; }
+  background: #71e310; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #26289f; }
+  background: #816966; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #e980d0; }
+  background: #e1ba7e; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #af033e; }
+  background: #4495b7; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #8b170e; }
+  background: #874de2; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #deee54; }
+  background: #19aa18; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #51bd06; }
+  background: #2845dd; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #9fa076; }
+  background: #72a799; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #29972e; }
+  background: #92d9f9; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #b91bd3; }
+  background: #d0fd0c; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #5dcea0; }
+  background: #a2d550; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #5ea084; }
+  background: #aae95d; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #756b8e; }
+  background: #c5c0e5; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #8c4871; }
+  background: #09c96d; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #63ac76; }
+  background: #8a0603; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #be1806; }
+  background: #a23e3a; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #be7413; }
+  background: #92b876; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #90b268; }
+  background: #d7890c; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #9e9521; }
+  background: #74d873; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #0bff68; }
+  background: #d69570; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #fb4147; }
+  background: #a61923; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #77b2b5; }
+  background: #37c142; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #1522bb; }
+  background: #26617c; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #8afedf; }
+  background: #6e5a92; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #cc1812; }
+  background: #1c3113; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #90323e; }
+  background: #c93b4f; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #a3ed6d; }
+  background: #1aa6e8; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #1a5fe5; }
+  background: #c9c92d; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #df0b6b; }
+  background: #d50e93; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #ff9a36; }
+  background: #451a1d; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #8bd952; }
+  background: #81b420; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #95872c; }
+  background: #541cba; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #665c07; }
+  background: #2256da; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #1effb0; }
+  background: #37173c; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #aa0a96; }
+  background: #4cbd82; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #3e2111; }
+  background: #e4dc2f; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #18db5f; }
+  background: #ee6441; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #d665ee; }
+  background: #e833d1; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #63bbaf; }
+  background: #25b158; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #22eca2; }
+  background: #e9b782; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #082cec; }
+  background: #dac8fb; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #26cbbf; }
+  background: #a066bf; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -12073,6 +12073,18 @@ input:checked + .sliders-Not .not-blue-bg {
   margin-right: 3px; }
 .save-queries-wrapper td:nth-child(2) {
   padding: 8px 0px 8px 0px !important; }
+.save-queries-wrapper .dropdown-with-img {
+  margin-right: 10px !important;
+  width: 250px;
+  border-radius: 50px;
+  border: 0px solid #cdcdd6; }
+  .save-queries-wrapper .dropdown-with-img .filter-text-div {
+    padding: 12px 0px;
+    color: #cdcdd6; }
+.save-queries-wrapper .dropdown-with-logos {
+  padding: 10px; }
+  .save-queries-wrapper .dropdown-with-logos li {
+    border: 0px solid #cdcdd6; }
 
 .device-select-div .theme-select {
   width: 250px;
@@ -12080,6 +12092,113 @@ input:checked + .sliders-Not .not-blue-bg {
 
 .search-right-bar {
   display: flex; }
+
+.multiselect {
+  width: 250px;
+  position: relative; }
+  .multiselect #checkboxes {
+    position: absolute;
+    width: 250px;
+    padding: 15px;
+    background: #fff;
+    z-index: 2; }
+  .multiselect .dropdown-search-bar {
+    border-radius: 5px;
+    border: 1px solid #c2c3c7;
+    padding: 5px;
+    width: 100%; }
+  .multiselect .done-btn {
+    width: 100%;
+    text-align: right; }
+
+.selectBox {
+  position: relative;
+  margin-right: 12px; }
+  .selectBox select {
+    border: 0px solid #ccc;
+    width: 100%;
+    font-weight: bold;
+    padding-left: 12px; }
+
+.overSelect {
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0; }
+
+#checkboxes {
+  display: none;
+  border: 1px #dadada solid; }
+
+#checkboxes label {
+  display: block; }
+
+/* The container */
+.check-container {
+  display: block;
+  position: relative;
+  padding-left: 30px;
+  margin-bottom: 12px;
+  cursor: pointer;
+  font-size: 16px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none; }
+
+/* Hide the browser's default checkbox */
+.check-container input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+  height: 0;
+  width: 0; }
+
+/* Create a custom checkbox */
+.checkmark {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 18px;
+  width: 18px;
+  background-color: #fff;
+  border: 2px solid #f4f4f4;
+  border-radius: 6px; }
+
+/* On mouse-over, add a grey background color */
+.check-container:hover input ~ .checkmark {
+  background-color: #fff;
+  border: 2px solid #f4f4f4;
+  border-radius: 6px; }
+
+/* When the checkbox is checked, add a blue background */
+.check-container input:checked ~ .checkmark {
+  background-color: #000;
+  border: 2px solid #000;
+  border-radius: 6px; }
+
+/* Create the checkmark/indicator (hidden when not checked) */
+.checkmark:after {
+  content: "";
+  position: absolute;
+  display: none; }
+
+/* Show the checkmark when checked */
+.check-container input:checked ~ .checkmark:after {
+  display: block; }
+
+/* Style the checkmark/indicator */
+.check-container .checkmark:after {
+  left: 4px;
+  top: 0px;
+  width: 6px;
+  height: 12px;
+  border: solid white;
+  border-width: 0 3px 3px 0;
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg); }
 
 @media screen and (max-width: 767px) {
   .profile-box {
