--- a/scss/_fahad.scss
+++ b/scss/_fahad.scss
@@ -1609,6 +1609,26 @@ input:checked+.sliders-Not .not-blue-bg {
   td:nth-child(2) {
     padding: 8px 0px 8px 0px !important;
   }
+
+  .dropdown-with-img {
+    margin-right: 10px !important;
+    width: 250px;
+    border-radius: 50px;
+    border: 0px solid #cdcdd6;
+
+    .filter-text-div {
+      padding: 12px 0px;
+      color: #cdcdd6;
+    }
+  }
+
+  .dropdown-with-logos {
+    padding: 10px;
+
+    li {
+      border: 0px solid #cdcdd6;
+    }
+  }
 }
 
 
@@ -1621,4 +1641,134 @@ input:checked+.sliders-Not .not-blue-bg {
 
 .search-right-bar {
   display: flex;
+}
+
+//multidrop css for save queries pages
+.multiselect {
+  width: 250px;
+  position: relative;
+
+  #checkboxes {
+    position: absolute;
+    width: 250px;
+    padding: 15px;
+    background: #fff;
+    z-index: 2;
+  }
+
+  .dropdown-search-bar {
+    border-radius: 5px;
+    border: 1px solid #c2c3c7;
+    padding: 5px;
+    width: 100%;
+  }
+
+  .done-btn {
+    width: 100%;
+    text-align: right;
+  }
+}
+
+.selectBox {
+  position: relative;
+  margin-right: 12px;
+
+  select {
+    border: 0px solid #ccc;
+    width: 100%;
+    font-weight: bold;
+    padding-left: 12px;
+  }
+}
+
+.overSelect {
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+}
+
+#checkboxes {
+  display: none;
+  border: 1px #dadada solid;
+}
+
+#checkboxes label {
+  display: block;
+}
+
+
+/* The container */
+.check-container {
+  display: block;
+  position: relative;
+  padding-left: 30px;
+  margin-bottom: 12px;
+  cursor: pointer;
+  font-size: 16px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+/* Hide the browser's default checkbox */
+.check-container input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+  height: 0;
+  width: 0;
+}
+
+/* Create a custom checkbox */
+.checkmark {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 18px;
+  width: 18px;
+  background-color: #fff;
+  border: 2px solid #f4f4f4;
+  border-radius: 6px;
+}
+
+/* On mouse-over, add a grey background color */
+.check-container:hover input~.checkmark {
+  background-color: #fff;
+  border: 2px solid #f4f4f4;
+  border-radius: 6px;
+}
+
+/* When the checkbox is checked, add a blue background */
+.check-container input:checked~.checkmark {
+  background-color: #000;
+  border: 2px solid #000;
+  border-radius: 6px;
+}
+
+/* Create the checkmark/indicator (hidden when not checked) */
+.checkmark:after {
+  content: "";
+  position: absolute;
+  display: none;
+}
+
+/* Show the checkmark when checked */
+.check-container input:checked~.checkmark:after {
+  display: block;
+}
+
+/* Style the checkmark/indicator */
+.check-container .checkmark:after {
+  left: 4px;
+  top: 0px;
+  width: 6px;
+  height: 12px;
+  border: solid white;
+  border-width: 0 3px 3px 0;
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg);
 }
