border css for dropdown filter field

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8655,205 +8655,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #427ffa; }
+  background: #889523; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #0efa52; }
+  background: #f905e8; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #7988f6; }
+  background: #f24618; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #ad354b; }
+  background: #a9f3ff; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #b4a665; }
+  background: #1d014b; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #ca4118; }
+  background: #a7ec4a; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #6f1378; }
+  background: #fb549e; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #bdaff9; }
+  background: #5df8d5; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #8ab710; }
+  background: #a06736; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #423cc1; }
+  background: #e6e285; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #c3fbba; }
+  background: #9a9ecb; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #3f207d; }
+  background: #2bc20b; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #9ebed0; }
+  background: #e47975; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #a051d2; }
+  background: #a61edb; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #771cf3; }
+  background: #12c251; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #ecca72; }
+  background: #5fd942; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #de5793; }
+  background: #fb0a2b; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #598762; }
+  background: #157924; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #3aa276; }
+  background: #967792; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #47a060; }
+  background: #62c51a; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #02cf6f; }
+  background: #ac20f9; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #e978c8; }
+  background: #d89103; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #88f259; }
+  background: #812930; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #d5f8cd; }
+  background: #6b43bf; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #70ebdf; }
+  background: #1cff7d; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #164da6; }
+  background: #20fef2; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #56c4ed; }
+  background: #6e68f5; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #3f4e2b; }
+  background: #9ffa4f; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #905d30; }
+  background: #976b2b; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #805eb2; }
+  background: #269812; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #857898; }
+  background: #7eef72; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #40b609; }
+  background: #a05941; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #7de7ad; }
+  background: #222329; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #30592e; }
+  background: #d0c151; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #2ae49a; }
+  background: #82dbd2; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #d926a1; }
+  background: #6a61a2; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #b9fe2c; }
+  background: #bcb413; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #c61ce6; }
+  background: #666f4e; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #415d0f; }
+  background: #0c282b; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #d595a3; }
+  background: #f3e77c; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #3c780a; }
+  background: #d9f666; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #d9a061; }
+  background: #abf32f; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #1b9608; }
+  background: #e75379; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #6edc84; }
+  background: #372b77; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #0f4c09; }
+  background: #04dc83; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #f210c8; }
+  background: #2e051b; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #3c822f; }
+  background: #d20108; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #8c285c; }
+  background: #7ae78c; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #62ecb4; }
+  background: #955de6; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #5c6a7c; }
+  background: #c49a5a; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #60928f; }
+  background: #0e75fb; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #62afc1; }
+  background: #84fa2f; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #d341b1; }
+  background: #1e0956; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #63115d; }
+  background: #816672; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #be9422; }
+  background: #206f94; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #4b139b; }
+  background: #a4afa5; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #a953f8; }
+  background: #b95e9d; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #461361; }
+  background: #cdb6a2; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #71e310; }
+  background: #c2375e; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #816966; }
+  background: #02f2fb; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #e1ba7e; }
+  background: #42ad43; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #4495b7; }
+  background: #ae39ba; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #874de2; }
+  background: #1c074a; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #19aa18; }
+  background: #58370a; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #2845dd; }
+  background: #5568e9; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #72a799; }
+  background: #cda05c; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #92d9f9; }
+  background: #d82c8a; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #d0fd0c; }
+  background: #a3d891; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #a2d550; }
+  background: #a3cadb; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #aae95d; }
+  background: #a45d78; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #c5c0e5; }
+  background: #c07451; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #09c96d; }
+  background: #8c0466; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #8a0603; }
+  background: #9457f5; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #a23e3a; }
+  background: #82109c; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #92b876; }
+  background: #25b53b; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #d7890c; }
+  background: #3de0e7; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #74d873; }
+  background: #b8fc2d; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #d69570; }
+  background: #76090d; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #a61923; }
+  background: #625d60; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #37c142; }
+  background: #85157d; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #26617c; }
+  background: #7c525c; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #6e5a92; }
+  background: #9b5bde; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #1c3113; }
+  background: #070da3; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #c93b4f; }
+  background: #e88e65; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #1aa6e8; }
+  background: #932b40; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #c9c92d; }
+  background: #a06dc6; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #d50e93; }
+  background: #d1849e; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #451a1d; }
+  background: #ab9585; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #81b420; }
+  background: #5eedd5; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #541cba; }
+  background: #104b9d; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #2256da; }
+  background: #8f7ddf; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #37173c; }
+  background: #819de3; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #4cbd82; }
+  background: #084313; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #e4dc2f; }
+  background: #7d867a; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #ee6441; }
+  background: #944f40; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #e833d1; }
+  background: #366b31; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #25b158; }
+  background: #1c5d2c; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #e9b782; }
+  background: #a10fb2; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #dac8fb; }
+  background: #162839; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #a066bf; }
+  background: #7bfb33; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -12097,14 +12097,19 @@ input:checked + .sliders-Not .not-blue-bg {
   width: 250px;
   position: relative; }
   .multiselect #checkboxes {
+    border-radius: 5px;
+    border-top-left-radius: 0px;
+    border-top-right-radius: 0px;
     position: absolute;
-    width: 250px;
+    width: 226px;
     padding: 15px;
     background: #fff;
-    z-index: 2; }
+    z-index: 2;
+    top: 34px;
+    left: 6px; }
   .multiselect .dropdown-search-bar {
     border-radius: 5px;
-    border: 1px solid #c2c3c7;
+    border: 1px #dadada solid;
     padding: 5px;
     width: 100%; }
   .multiselect .done-btn {
@@ -12129,7 +12134,8 @@ input:checked + .sliders-Not .not-blue-bg {
 
 #checkboxes {
   display: none;
-  border: 1px #dadada solid; }
+  border: 1px #dadada solid;
+  border-top: 0px solid #c2c3c7; }
 
 #checkboxes label {
   display: block; }
